add lyt t88m support

--- a/package/boot/arm-trusted-firmware-rockchip-vendor/Makefile
+++ b/package/boot/arm-trusted-firmware-rockchip-vendor/Makefile
@@ -47,6 +47,7 @@ define Trusted-Firmware-A/rk3588
   ATF:=rk35/$(RK3588_ATF)
   DDR:=rk35/$(RK3588_DDR)
   DDR1:=rk35/$(RK3588_DDR_LOWFREQ)
+  DDR2:=rk35/$(RK3588_DDR_UART2_115200)
 endef
 
 TFA_TARGETS:= \
@@ -83,6 +84,9 @@ else
 	$(CP) $(PKG_BUILD_DIR)/bin/$(DDR) $(STAGING_DIR_IMAGE)/
 ifneq ($(DDR1),)
 	$(CP) $(PKG_BUILD_DIR)/bin/$(DDR1) $(STAGING_DIR_IMAGE)/
+endif
+ifneq ($(DDR2),)
+	$(CP) $(PKG_BUILD_DIR)/bin/$(DDR2) $(STAGING_DIR_IMAGE)/
 endif
 endif
 endef
