--- a/package/boot/uboot-rk35xx/Makefile
+++ b/package/boot/uboot-rk35xx/Makefile
@@ -88,8 +88,17 @@ define U-Boot/easepi-ddr1-rk3588
   UBOOT_CONFIG:=easepi-rk3588
 endef
 
+define U-Boot/lyt-rk3588
+  NAME:=RK3588 LYT
+  DEPENDS:=+PACKAGE_u-boot-$(1):trusted-firmware-a-rk3588
+  ATF:=$(RK3588_ATF)
+  DDR:=$(RK3588_DDR_UART2_115200)
+  SOC:=rk3588
+  UBOOT_CONFIG:=lyt-rk3588
+endef
+
 UBOOT_TARGETS := easepi-rk3568 easepi-rk3588 easepi-rk3528 xgp-rk3568 \
-	easepi-ddr1-rk3588 easepi-rk3308
+	easepi-ddr1-rk3588 easepi-rk3308 lyt-rk3588
 
 UBOOT_CONFIGURE_VARS += USE_PRIVATE_LIBGCC=yes
 
