--- a/package/boot/uboot-rk35xx/src/configs/yijiahe-jm10_defconfig
+++ b/package/boot/uboot-rk35xx/src/configs/yijiahe-jm10_defconfig
@@ -185,6 +185,7 @@ CONFIG_NET_VENDOR_MARVELL=y
 CONFIG_NET_DSA=m
 CONFIG_NET_DSA_MV88E6XXX=m
 CONFIG_NET_DSA_MV88E6XXX_PTP=y
+CONFIG_NET_DSA_MV88E6XXX_GLOBAL2=y
 CONFIG_MVMDIO=y
 # CONFIG_BCMDHD_SDIO is not set
 CONFIG_BCMDHD_PCIE=y
